# Building-a-Batch-ETL-Pipeline-RedPanda

./: .env.sample  .pre-commit-config.yaml  .tree  Makefile  README.md  docker-compose.yaml  dockerfile  main.py  nginx.conf  pyproject.toml  requirements.txt  setup.sh
Python-3.11.10/: Makefile  Makefile.pre  config.status  pyconfig.h
Python-3.11.10/Modules/: Setup.stdlib  ld_so_aix
ai_module/: Dockerfile  pyproject.toml
app/: pyproject.toml
app/backend/: main.py
app/config/: logging_config.py  setup.py
app/data_ingestion/: coin_market_cap_ingestor.py  data_ingestor.py  news_data_ingestor.py
app/etl/: etl_pipeline.py  redpanda_consumer.py  redpanda_init.py  redpanda_producer.py
app/setup/: config.py  logging_config.py
app/storage/: motherduck.py  snowflake.py  storage_setup.py
dashboard/: Dockerfile  pyproject.toml
dashboard/src/: main.py
data_ingestion/: coin_market_cap_ingestor.py  news_data_ingestor.py
data_pipeline/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
data_pipeline/docs/: ELT_vs_ETL.md
data_pipeline/src/: main.py
data_pipeline/src/core/: config.py  logging_config.py
data_pipeline/src/data_ingestion/: data_ingestor.py
data_pipeline/src/etl/: redpanda_init.py  redpanda_producer.py
data_pipeline/src/services/airflow/dags/: coin_market_cap_dag.py  news_dag.py
data_pipeline/src/services/data_ingestion/: coin_market_cap_ingestor.py  data_ingestor.py  news_data_ingestor.py
data_pipeline/src/services/etl/: etl_pipeline.py  redpanda_consumer.py  redpanda_init.py  redpanda_producer.py  redpanda_transformer.py
data_pipeline/src/services/storage/: motherduck.py  snowflake.py  storage_setup.py
data_pipeline/src/services/storage/motherduck/: motherduck_bitcoin.py  motherduck_init.py  motherduck_news.py
data_pipeline/src/static/: style.css
data_pipeline/src/storage/: snowflake.py
data_pipeline/src/templates/: index.html
data_pipeline/tests/: test_data_ingestion.py  test_etl_pipeline.py
etl/: redpanda_producer.py
notebooks/: bitcoin_data_inspection.ipynb  motherduck.ipynb  news_data_inspection.ipynb  producer.ipynb  research.ipynb  snowflake.ipynb  test.json
storage/: snowflake.py
tests/: test_data_ingestion.py  test_etl_pipeline.py
