[tool.poetry]
name = "building-a-batch-etl-pipeline-redpanda"
version = "0.1.0"
description = ""
authors = ["BouajilaHamza <hamza.bouajila@enetcom.u-sfax.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
quixstreams = "^3.2.1"
snowflake-connector-python = "^3.12.3"
pydantic = "^2.9.2"
python-decouple = "^3.8"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
