[tool.poetry]
name = "building-a-batch-etl-pipeline-redpanda"
version = "0.1.0"
description = ""
authors = ["BouajilaHamza <hamza.bouajila@enetcom.u-sfax.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
quixstreams = "3.0.0"
pydantic = "^2.9.2"
python-decouple = "^3.8"
ipykernel = "^6.29.5"
streamlit = "^1.40.1"
scrapy = "^2.11.2"
pre-commit = "^4.0.1"
pandas = "^2.2.3"
duckdb = "^1.1.3"
snowflake-connector-python = "^3.12.4"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
