[tool.poetry]
name = "ai-module"
version = "0.1.0"
description = ""
authors = ["BouajilaHamza <hamza.bouajila@enetcom.u-sfax.tn>"]
readme = "README.md"
packages = [{include = "ai_module", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
