[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["BouajilaHamza <hamza.bouajila@enetcom.u-sfax.tn>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
