[tool.poetry]
name = "building-a-batch-etl-pipeline-redpanda"
version = "0.1.0"
description = ""
authors = ["BouajilaHamza <hamza.bouajila@enetcom.u-sfax.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
quixstreams = "3.0.0"
pydantic = "^2.9.2"
python-decouple = "^3.8"
scrapy = "^2.11.2"
pandas = "^2.2.3"
duckdb = "^1.1.3"
snowflake-connector-python = "^3.12.4"
fastapi = "^0.115.6"
python-multipart = "^0.0.20"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
